--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,9 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        buildFeatures{
+            viewBinding = true
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
